@@ -94,3 +94,5 @@
 20040223 Merge changes from fuse-utils_0_6_2 to HEAD.
 20040223 TAG: fuse-utils_0_6_2-merge-1
 20040616 acconfig.h,configure.in: remove use of acconfig.h.
+20040616 .cvsignore,createhdf.c,Makefile.am: add createhdf utility for
+	 creating empty .hdf files.
